# PipaPico

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  c_cpp_properties.json  config.h  debug_comm.c  debug_comm.h  detection.c  detection.h  main.c  median_filter.c  median_filter.h  symmetry.c  symmetry.h  test.c  types.h
tests/: integration_tests.c  unit_tests.c
